<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iitg.cestrum.cambook.VerificationFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_gravity="center"

                android:textSize="35sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:layout_gravity="center"
            android:background="@color/grey_100"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/email_password_fields"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/field_email_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:text="@string/email_verification_text"
                    />


            </LinearLayout>

            <!--  <LinearLayout
                  android:id="@+id/email_password_buttons"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/email_password_fields"
                  android:orientation="vertical"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp">

                  <Button
                      android:id="@+id/email_sign_in_button"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/sign_in"
                      android:layout_marginTop="10sp"
                      android:layout_gravity="center"
                      android:theme="@style/ThemeOverlay.MyDarkButton" />

                  <TextView
                      android:id="@+id/email_create_account_button"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:layout_marginTop="20sp"
                      android:layout_weight="1"
                      android:text="@string/create_account"
                      android:textStyle="italic" />
              </LinearLayout>
      -->
            <LinearLayout
                android:id="@+id/signed_in_buttons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="visible"
                android:weightSum="2.0"
                >

                <Button
                    android:id="@+id/verify_email_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_gravity="center"
                    android:text="@string/verify_email"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:id="@+id/sign_out_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/sign_out"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />



            </LinearLayout>

            <LinearLayout
                android:id="@+id/signed_in_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="visible"
                android:weightSum="2.0"
                >


                <Button
                    android:id="@+id/sign_in_continue_form"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/ctn"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />



            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</FrameLayout>
